// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Image: Avatar Image 1`] = `
.c0.c0 {
  background-color: #fff;
  width: 32px;
  height: 32px;
  font-size: 1rem;
  font-weight: 500;
  line-height: 22px;
}

.c0.c0:hover {
  opacity: 0.8;
  cursor: pointer;
}

.c0.c0:active {
  opacity: 0.6;
}

<div
  className="MuiAvatar-root c0"
  size="sm"
>
  <img
    className="MuiAvatar-img"
    src="test-file-stub"
  />
</div>
`;

exports[`Storyshots Avatar Name: Avatar Name 1`] = `
.c0.c0 {
  background-color: #69A3EB;
  width: 32px;
  height: 32px;
  font-size: 1rem;
  font-weight: 500;
  line-height: 22px;
}

.c0.c0:hover {
  opacity: 0.8;
  cursor: pointer;
}

.c0.c0:active {
  opacity: 0.6;
}

<div
  className="MuiAvatar-root c0 MuiAvatar-colorDefault"
  color="lake"
  size="sm"
>
  SH
</div>
`;
